src/scss/App.scss
@import './_reset';
@import './fonts';
@import './variables.scss';

*,*::after,
*::before {
  box-sizing: border-box;
  font-family: 'Montserrat';
  font-weight: 700;
}

.main-btn {
  padding: 15px 40px;
  text-align: center;
  border-radius: 5px;
  font-size: 14px;
  line-height: 22px;
  cursor: pointer;
}

.btn-login {
  background-color: $primary-color;
  color:#fff;
  margin-right: 10px;
}

.btn-second {
  color:$primary-color;
  border: 1px solid $primary-color;
  text-decoration: none;
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 22px;
}

.title {
  font-family: Montserrat;
  font-style: normal;
  font-weight: bold;
  font-size: 58px;
  line-height: 80px;
  letter-spacing: 0.2px;
  color: $text-color;
  margin-bottom: 35px;
}


@media  (max-width:768px) {
  .title {
    font-size: 28px;
    line-height: 39px;
  }
}

